--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "colorbrewer",
-    "version": "1.3.0",
+    "version": "1.3.1",
     "description": "A shim module of colorbrewer2 by Cythina Brewer for browserify",
     "keywords": [
         "colors",
@@ -31,8 +31,10 @@
         "email": "saikocatz@gmail.com"
     },
     "style": "colorbrewer.css",
+    "types": "colorbrewer.d.ts",
     "files": [
         "colorbrewer.css",
+        "colorbrewer.d.ts",
         "index.js"
     ],
     "main": "index.js"
